# cfabric

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  demo3_messages_diagram.md  demo3_module_message_diagram.dot  demo3_module_message_diagram.md  demo3_modules_diagram.md  demo3_sequence_diagram.md  patterns.md  run_demo3.sh
.github/workflows/: ci.yml
src/: demo1.cpp  demo2.cpp  demo3.cpp
src/include/: cfabric.hpp  cfabric_message_types.hpp  demo_message_types.hpp  demo_subsystem.hpp  demo_subsystem_1.hpp  demo_subsystem_2.hpp
src/tests/: test_cfabric.cpp  test_cfabric_performance.cpp
